multi-language support

--- a/active.zh-CN.toml
+++ b/active.zh-CN.toml
@@ -1,23 +1,21 @@
-"OrderedValue.Customize" = "数据校验失败"
+"OrderedValue.Customize" = "{{.Key}}校验失败"
 "OrderedValue.Required" = "{{.Key}}不能为空"
 "OrderedValue.Gt" = "{{.Key}}必须大于{{.Value}}"
 "OrderedValue.Gte" = "{{.Key}}必须大于等于{{.Value}}"
 "OrderedValue.Lt" = "{{.Key}}必须小于{{.Value}}"
 "OrderedValue.Lte" = "{{.Key}}必须小于等于{{.Value}}"
-"OrderedValue.IncludeBy" = "{{.Key}}必须包含在{{.Value}}之内"
-"OrderedValue.ExcludeBy" = "{{.Key}}不应该包含在{{.Value}}之内"
+"OrderedValue.In" = "{{.Key}}必须包含在{{.Value}}之内"
 
-"SliceValue.Customize" = "数据校验失败"
+"SliceValue.Customize" = "{{.Key}}校验失败"
 "SliceValue.Required" = "{{.Key}}不能为空"
 "SliceValue.Eq" = "{{.Key}}长度必须等于{{.Value}}"
 "SliceValue.Gt" = "{{.Key}}长度必须大于{{.Value}}"
 "SliceValue.Gte" = "{{.Key}}长度必须大于等于{{.Value}}"
 "SliceValue.Lt" = "{{.Key}}长度必须小于{{.Value}}"
 "SliceValue.Lte" = "{{.Key}}长度必须小于等于{{.Value}}"
-"SliceValue.Include" = "{{.Key}}必须包含{{.Value}}"
-"SliceValue.Exclude" = "{{.Key}}不应该包含{{.Value}}"
+"SliceValue.Contains" = "{{.Key}}必须包含{{.Value}}"
 
-"StringValue.Customize" = "数据校验失败"
+"StringValue.Customize" = "{{.Key}}校验失败"
 "StringValue.ParseRegexp" = "正则表达式解析失败"
 "StringValue.Required" = "{{.Key}}不能为空"
 "StringValue.Eq" = "{{.Key}}长度必须等于{{.Value}}"
@@ -25,8 +23,7 @@
 "StringValue.Gte" = "{{.Key}}长度必须大于等于{{.Value}}"
 "StringValue.Lt" = "{{.Key}}长度必须小于{{.Value}}"
 "StringValue.Lte" = "{{.Key}}长度必须小于等于{{.Value}}"
-"StringValue.IncludeBy" = "{{.Key}}必须包含在{{.Value}}之内"
-"StringValue.ExcludeBy" = "{{.Key}}不应该包含在{{.Value}}之内"
+"StringValue.In" = "{{.Key}}必须包含在{{.Value}}之内"
 "StringValue.MatchString" = "{{.Key}}必须和给定的正则表达式相匹配"
 "StringValue.MatchRegexp" = "{{.Key}}必须和给定的正则表达式相匹配"
 "StringValue.IPv4" = "{{.Key}}格式必须为 ipv4"
@@ -42,6 +39,6 @@
 "StringValue.Uppercase" = "{{.Key}}必须由大写字母组成"
 
 "PointerValue.Required" = "{{.Key}}不能为空"
-"PointerValue.Customize" = "数据校验失败"
+"PointerValue.Customize" = "{{.Key}}校验失败"
 
-"AnyValue.Customize" = "数据校验失败"
+"AnyValue.Customize" = "{{.Key}}校验失败"
