--- a/active.en-US.toml
+++ b/active.en-US.toml
@@ -1,44 +1,42 @@
+"AnyValue.Customize" = "{{.Key}} validation failed"
+"OrderedValue.Between" = "{{.Key}} should satisfies {{.Arg0}}<=x<{{.Arg1}}"
 "OrderedValue.Customize" = "{{.Key}} validation failed"
+"OrderedValue.Gt" = "{{.Key}} should great than {{.Arg0}}"
+"OrderedValue.Gte" = "{{.Key}} should great or equal than {{.Arg0}}"
+"OrderedValue.In" = "{{.Key}} should be one of {{.Arg0}}"
+"OrderedValue.Lt" = "{{.Key}} should less than {{.Arg0}}"
+"OrderedValue.Lte" = "{{.Key}} should less or equal than {{.Arg0}}"
 "OrderedValue.Required" = "{{.Key}} is required"
-"OrderedValue.Gt" = "{{.Key}} should great than {{.Value}}"
-"OrderedValue.Gte" = "{{.Key}} should great or equal than {{.Value}}"
-"OrderedValue.Lt" = "{{.Key}} should less than {{.Value}}"
-"OrderedValue.Lte" = "{{.Key}} should less or equal than {{.Value}}"
-"OrderedValue.In" = "{{.Key}} should be one of {{.Value}}"
-
+"PointerValue.Customize" = "{{.Key}} validation failed"
+"PointerValue.Required" = "{{.Key}} is required"
+"SliceValue.Contains" = "{{.Key}} should contains {{.Arg0}}"
 "SliceValue.Customize" = "{{.Key}} validation failed"
+"SliceValue.Eq" = "Size of {{.Key}} should equal to {{.Arg0}}"
+"SliceValue.Gt" = "Size of {{.Key}} should great than {{.Arg0}}"
+"SliceValue.Gte" = "Size of {{.Key}} should great or equal than {{.Arg0}}"
+"SliceValue.Lt" = "Size of {{.Key}} should less than {{.Arg0}}"
+"SliceValue.Lte" = "Size of {{.Key}} should less or equal than {{.Arg0}}"
 "SliceValue.Required" = "{{.Key}} is required"
-"SliceValue.Eq" = "Size of {{.Key}} should equal to {{.Value}}"
-"SliceValue.Gt" = "Size of {{.Key}} should great than {{.Value}}"
-"SliceValue.Gte" = "Size of {{.Key}} should great or equal than {{.Value}}"
-"SliceValue.Lt" = "Size of {{.Key}} should less than {{.Value}}"
-"SliceValue.Lte" = "Size of {{.Key}} should less or equal than {{.Value}}"
-"SliceValue.Contains" = "{{.Key}} should contains {{.Value}}"
-
+"StringValue.Alphabet" = "format of {{.Key}} should be alphabet"
+"StringValue.AlphabetNumeric" = "format of {{.Key}} should be alphabet or alphabet"
+"StringValue.Base64" = "format of {{.Key}} should be base64"
+"StringValue.Between" = "{{.Key}} should satisfies {{.Arg0}}<=x<{{.Arg1}}"
 "StringValue.Customize" = "{{.Key}} validation failed"
-"StringValue.ParseRegexp" = "Regexp parsing failure"
-"StringValue.Required" = "{{.Key}} is required"
-"StringValue.Eq" = "Length of {{.Key}} should equal to {{.Value}}"
-"StringValue.Gt" = "Length of {{.Key}} should great than {{.Value}}"
-"StringValue.Gte" = "Length of {{.Key}} should great or equal than {{.Value}}"
-"StringValue.Lt" = "Length of {{.Key}} should less than {{.Value}}"
-"StringValue.Lte" = "Length of {{.Key}} should less or equal than {{.Value}}"
-"StringValue.In" = "{{.Key}} should be one of {{.Value}}"
-"StringValue.MatchString" = "{{.Key}} should match the regexp"
-"StringValue.MatchRegexp" = "{{.Key}} should match the regexp"
+"StringValue.Email" = "format of {{.Key}} should be email"
+"StringValue.Eq" = "Length of {{.Key}} should equal to {{.Arg0}}"
+"StringValue.Gt" = "Length of {{.Key}} should great than {{.Arg0}}"
+"StringValue.Gte" = "Length of {{.Key}} should great or equal than {{.Arg0}}"
+"StringValue.Hex" = "format of {{.Key}} should be hex"
 "StringValue.IPv4" = "format of {{.Key}} should be ipv4"
 "StringValue.IPv6" = "format of {{.Key}} should be ipv6"
-"StringValue.URL" = "format of {{.Key}} should be url"
-"StringValue.Base64" = "format of {{.Key}} should be base64"
-"StringValue.Hex" = "format of {{.Key}} should be hex"
-"StringValue.Email" = "format of {{.Key}} should be email"
-"StringValue.Alphabet" = "format of {{.Key}} should be alphabet"
-"StringValue.Numeric" = "format of {{.Key}} should be numeric"
-"StringValue.AlphabetNumeric" = "format of {{.Key}} should be alphabet or alphabet"
+"StringValue.In" = "{{.Key}} should be one of {{.Arg0}}"
 "StringValue.Lowercase" = "format of {{.Key}} should be lowercase"
+"StringValue.Lt" = "Length of {{.Key}} should less than {{.Arg0}}"
+"StringValue.Lte" = "Length of {{.Key}} should less or equal than {{.Arg0}}"
+"StringValue.MatchRegexp" = "{{.Key}} should match the regexp"
+"StringValue.MatchString" = "{{.Key}} should match the regexp"
+"StringValue.Numeric" = "format of {{.Key}} should be numeric"
+"StringValue.ParseRegexp" = "Regexp parsing failure"
+"StringValue.Required" = "{{.Key}} is required"
+"StringValue.URL" = "format of {{.Key}} should be url"
 "StringValue.Uppercase" = "format of {{.Key}} should be uppercase"
-
-"PointerValue.Required" = "{{.Key}} is required"
-"PointerValue.Customize" = "{{.Key}} validation failed"
-
-"AnyValue.Customize" = "{{.Key}} validation failed"
